@@ -11,3 +11,4 @@ _None_
 [B]Channel related[/B]
 * Fixed: Issue with empty folders in main TV4 listings.
 * Fixed: Omroep Brabant broke due to back end changes.
+* Fixed: Radio 538 live streams (Fixes #1548).
